<resources>
    <!-- application -->
    <string name="app_name">Knittings</string>
    <string name="about">About</string>

    <!-- navigation drawer (dropbox export, categories etc.) -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_header_export">Export</string>

    <!-- generic dialog strings -->
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>

    <!-- sorting -->
    <string name="sorting_newest_first">Newest first</string>
    <string name="sorting_oldest_first">Oldest first</string>
    <string name="sorting_alphabetical">Alphabetical</string>

    <!-- filter -->
    <string name="filter_show_all">All</string>

    <!-- activities -->
    <string name="activity_knitting_details">Knitting Details</string>
    <string name="activity_edit_knitting_details">Edit Knitting Details</string>
    <string name="activity_photo_gallery">Photos</string>
    <string name="activity_photo">Edit Photo</string>

    <!-- knittings list -->
    <string name="knittings_title">Knittings</string>

    <!-- date picker -->
    <string name="date_picker_title">Date</string>

    <!-- delete knittings dialog -->
    <string name="delete_knitting_dialog_title">Delete</string>
    <string name="delete_knitting_dialog_question">Do you really want to delete the knitting?</string>
    <string name="delete_knitting_dialog_delete_button">Delete</string>
    <!-- delete photo dialog -->
    <string name="delete_photo_dialog_title">Delete</string>
    <string name="delete_photo_dialog_question">Do you really want to delete the photo?</string>
    <string name="delete_photo_dialog_delete_button">Delete</string>

    <string name="rating">Rating:</string>
    <string name="photo">Photo</string>

    <!-- take photo dialog -->
    <string name="take_photo">Take photo</string>
    <string name="import_from_gallery">Import from gallery</string>

    <!-- knitting details menu -->
    <string name="show_gallery">Show gallery</string>
    <string name="add_photo">Add photo</string>

    <!-- about dialog -->
    <string name="idea_and_concept">Idea and concept: Ulrike Jordan</string>
    <string name="programming">Programming: Michael Thaler</string>

    <!-- knitting details -->
    <string name="knitting_details_started">Started: %1$s</string>
    <string name="knitting_details_finished">Finished: %1$s</string>
    <string name="knitting_details_needle">Needle: %1$.1f</string>
    <string name="knitting_details_size">Size: %1$.1f</string>
    <string name="knitting_details_duration">Duration: %1$s</string>
    <string name="knitting_details_category">Category: %1$s</string>
    <string name="knitting_category_hint">Category:</string>

    <!-- network error -->
    <string name="network_error_title">Network Error</string>
    <string name="network_error_dropbox">Could not connect to Dropbox</string>

    <string name="sort">Sort</string>
    <string name="filter">Filter</string>

    <string name="edit_knitting_details_category">Category</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
